small updates to notebook

--- a/post_summarization.ipynb
+++ b/post_summarization.ipynb
@@ -37,12 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "qocN2BVHWjTj"
       },
       "outputs": [],
       "source": [
+        "# import statements\n",
         "import time\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
@@ -80,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -425,6 +426,7 @@
         }
       ],
       "source": [
+        "# Quick look at data\n",
         "data.head(3)"
       ]
     },
@@ -809,7 +811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1128,6 +1130,7 @@
         }
       ],
       "source": [
+        "# Sentiment scores\n",
         "data.groupby('sentiment').score.describe()"
       ]
     },
@@ -1223,13 +1226,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "nnAKlqP4Kjfe"
       },
       "outputs": [],
       "source": [
-        "# sample 20 comments\n",
+        "# sample 20 comments for summarization\n",
         "df_sample = data.sample(n=20, random_state=23)\n",
         "# sample 1 comment\n",
         "sample_comment = df_sample.cleaned_text.iloc[2]"
