--- a/notebooks/data_analysis_viz.ipynb
+++ b/notebooks/data_analysis_viz.ipynb
@@ -386,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
