--- a/notebooks/roberta_sentiment_analysis.ipynb
+++ b/notebooks/roberta_sentiment_analysis.ipynb
@@ -1141,6 +1141,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+      "state":{},
         "063cef69a1964ee4abd1e99525db034e": {
           "model_module": "@jupyter-widgets/controls",
           "model_module_version": "1.5.0",
