--- a/notebooks/post_summarization.ipynb
+++ b/notebooks/post_summarization.ipynb
@@ -2649,6 +2649,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+      "state":{}, 
         "0009dee8af6c4e26959dd3bc52a4b32b": {
           "model_module": "@jupyter-widgets/controls",
           "model_module_version": "1.5.0",
