--- a/notebooks/roberta_sentiment_analysis.ipynb
+++ b/notebooks/roberta_sentiment_analysis.ipynb
@@ -94,19 +94,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OQeEFa7f9_q0"
-      },
-      "outputs": [],
-      "source": [
-        "# import torch\n",
-        "# import torch.nn.functional as F"
+        "# !pip install transformers"
       ]
     },
     {
@@ -532,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -641,7 +629,7 @@
         }
       ],
       "source": [
-        "data.head(2)"
+        "data.head(2)\n"
       ]
     },
     {
@@ -1137,11 +1125,10 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.2"
+      "version": "3.11.11"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-      "state":{},
         "063cef69a1964ee4abd1e99525db034e": {
           "model_module": "@jupyter-widgets/controls",
           "model_module_version": "1.5.0",
@@ -3193,7 +3180,8 @@
             "style": "IPY_MODEL_de42d855669d4ec4849c31d8a3452d6d",
             "value": "config.json: 100%"
           }
-        }
+        },
+        "state": {}
       }
     }
   },
